# StockViewer

./: .gitignore  pyproject.toml
config/: config_example.ini
stockviewer/: ExchangeRateFetcher.py  StockFetcher.py  StockLoader.py  StockSaver.py  app.py  db.py  wsgi.py
stockviewer/StockFetcher/: StockFetcher.py
stockviewer/templates/: index.html
